# cppcourse-brunel

./: CMakeLists.txt  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Neurons_unittests.cpp  README.md  cmake_install.cmake  main.cpp
Figure8/: Spikes.gdf~  SpikesD.gdf
gtest/: CTestTestfile.cmake  Makefile
